// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCover snapshot should match snapshot for January 1`] = `
<div>
  <div
    class="relative inline-block"
  >
    <div
      class="relative overflow-hidden"
      style="width: 240px; height: 360px; border-radius: 12px; box-shadow: 0 16px 32px rgba(0, 0, 0, 0.3); margin: 0px auto;"
    >
      <div
        class="absolute inset-0"
      />
      <div
        class="absolute animate-rotate"
        style="right: 12px; top: 12px; font-size: 40px; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center; opacity: 0.8;"
      >
        ❄️
      </div>
      <div
        class="relative flex h-full flex-col text-center text-white"
        style="padding: 24px 20px; box-sizing: border-box;"
      >
        <h1
          class="font-orbitron"
          style="font-size: 22.400000000000002px; font-weight: bold; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); margin-bottom: 4px; letter-spacing: 1px; color: rgb(230, 243, 255); font-style: normal; text-transform: none;"
        >
          SUDOKU RACE
        </h1>
        <div
          style="font-size: 14.4px; margin-bottom: 16px; opacity: 0.9; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);"
        >
          January
           Edition
        </div>
        <div
          class="mx-auto my-auto"
          style="width: 96px; height: 96px; margin: 16px auto; border: 2.4000000000000004px solid rgba(255, 255, 255, 0.8); border-radius: 6.4px; display: grid; grid-template-columns: repeat(9, 1fr); grid-template-rows: repeat(9, 1fr); background: rgba(255, 255, 255, 0.9); gap: 0.8px;"
        >
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            5
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51); border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51); border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            5
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            2
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51); border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51); border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            2
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.8px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 6.4px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
        </div>
        <div
          class="mt-auto"
          style="background: rgba(0, 0, 0, 0.3); padding: 12px; border-radius: 8px;"
        >
          <div
            style="margin: 2.4000000000000004px 0px; font-size: 9.600000000000001px;"
          >
            <strong>
              50 Puzzles • Multiple Difficulties
            </strong>
          </div>
          <div
            style="margin: 2.4000000000000004px 0px; font-size: 9.600000000000001px;"
          >
            Basic to Beyond Brutal Techniques
          </div>
          <div
            style="margin: 2.4000000000000004px 0px; font-size: 9.600000000000001px;"
          >
            ❄️ Winter Challenge Edition ❄️
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookCover snapshot should match snapshot for large size 1`] = `
<div>
  <div
    class="relative inline-block"
  >
    <div
      class="relative overflow-hidden"
      style="width: 300px; height: 450px; border-radius: 15px; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3); margin: 0px auto;"
    >
      <div
        class="absolute inset-0"
      />
      <div
        class="absolute animate-rotate"
        style="right: 15px; top: 15px; font-size: 50px; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; opacity: 0.8;"
      >
        ❄️
      </div>
      <div
        class="relative flex h-full flex-col text-center text-white"
        style="padding: 30px 25px; box-sizing: border-box;"
      >
        <h1
          class="font-orbitron"
          style="font-size: 28px; font-weight: bold; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); margin-bottom: 5px; letter-spacing: 1px; color: rgb(230, 243, 255); font-style: normal; text-transform: none;"
        >
          SUDOKU RACE
        </h1>
        <div
          style="font-size: 18px; margin-bottom: 20px; opacity: 0.9; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);"
        >
          January
           Edition
        </div>
        <div
          class="mx-auto my-auto"
          style="width: 120px; height: 120px; margin: 20px auto; border: 3px solid rgba(255, 255, 255, 0.8); border-radius: 8px; display: grid; grid-template-columns: repeat(9, 1fr); grid-template-rows: repeat(9, 1fr); background: rgba(255, 255, 255, 0.9); gap: 1px;"
        >
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            5
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51); border-bottom: 1px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51); border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            5
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            2
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51); border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51); border-bottom: 1px solid rgb(51, 51, 51);"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            2
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 1px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
        </div>
        <div
          class="mt-auto"
          style="background: rgba(0, 0, 0, 0.3); padding: 15px; border-radius: 10px;"
        >
          <div
            style="margin: 3px 0px; font-size: 12px;"
          >
            <strong>
              50 Puzzles • Multiple Difficulties
            </strong>
          </div>
          <div
            style="margin: 3px 0px; font-size: 12px;"
          >
            Basic to Beyond Brutal Techniques
          </div>
          <div
            style="margin: 3px 0px; font-size: 12px;"
          >
            ❄️ Winter Challenge Edition ❄️
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookCover snapshot should match snapshot for small size 1`] = `
<div>
  <div
    class="relative inline-block"
  >
    <div
      class="relative overflow-hidden"
      style="width: 180px; height: 270px; border-radius: 9px; box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3); margin: 0px auto;"
    >
      <div
        class="absolute inset-0"
      />
      <div
        class="absolute animate-rotate"
        style="right: 9px; top: 9px; font-size: 30px; width: 36px; height: 36px; display: flex; align-items: center; justify-content: center; opacity: 0.8;"
      >
        ❄️
      </div>
      <div
        class="relative flex h-full flex-col text-center text-white"
        style="padding: 18px 15px; box-sizing: border-box;"
      >
        <h1
          class="font-orbitron"
          style="font-size: 16.8px; font-weight: bold; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); margin-bottom: 3px; letter-spacing: 1px; color: rgb(230, 243, 255); font-style: normal; text-transform: none;"
        >
          SUDOKU RACE
        </h1>
        <div
          style="font-size: 10.799999999999999px; margin-bottom: 12px; opacity: 0.9; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);"
        >
          January
           Edition
        </div>
        <div
          class="mx-auto my-auto"
          style="width: 72px; height: 72px; margin: 12px auto; border: 1.7999999999999998px solid rgba(255, 255, 255, 0.8); border-radius: 4.8px; display: grid; grid-template-columns: repeat(9, 1fr); grid-template-rows: repeat(9, 1fr); background: rgba(255, 255, 255, 0.9); gap: 0.6px;"
        >
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            5
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51); border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51); border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            5
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            2
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51); border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51); border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-bottom: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            3
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            2
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            9
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            6
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          >
            8
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            1
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold; border-right: 0.6px solid rgb(51, 51, 51);"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            4
          </div>
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          />
          <div
            class="flex items-center justify-center"
            style="background: rgba(255, 255, 255, 0.7); font-size: 4.8px; color: rgb(51, 51, 51); font-weight: bold;"
          >
            7
          </div>
        </div>
        <div
          class="mt-auto"
          style="background: rgba(0, 0, 0, 0.3); padding: 9px; border-radius: 6px;"
        >
          <div
            style="margin: 1.7999999999999998px 0px; font-size: 7.199999999999999px;"
          >
            <strong>
              50 Puzzles • Multiple Difficulties
            </strong>
          </div>
          <div
            style="margin: 1.7999999999999998px 0px; font-size: 7.199999999999999px;"
          >
            Basic to Beyond Brutal Techniques
          </div>
          <div
            style="margin: 1.7999999999999998px 0px; font-size: 7.199999999999999px;"
          >
            ❄️ Winter Challenge Edition ❄️
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
